<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Traffic UK Highways Agency</string>
    <string name="title_details">Details</string>
    <string name="error">Error</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="severity_icon_text">severity icon</string>
    <string name="location_text">location</string>
    <string name="description_text">description</string>
    <string name="category_text">category</string>
    <string name="title_activity_details">Details</string>
    <string name="default_text">---</string>
    <string name="region_text">Region</string>

    <!-- Preferences -->
    <string name="title_settings">Settings</string>
    <string name="incident_select_dialog_title">Select Event Types.</string>
    <string name="incident_select_title">Event filter.</string>
    <string name="pref_update_on_start_title">Update On Start.</string>
    <string name="pref_update_on_start_summary">Update on application start up.</string>
    <string name="pref_auto_update_title">Auto update.</string>
    <string name="pref_auto_update_summary">Auto update in background.</string>
    <string name="pref_incident_select_summary">Filter event types from events list.</string>
    <string name="pref_processing_settings_title">Operation Settings.</string>
    <string name="pref_interface_settings_title">Interface Settings.</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
