<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_processing_settings"
        android:title="@string/pref_processing_settings_title" >
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_update_on_start"
            android:summary="@string/pref_update_on_start_summary"
            android:title="@string/pref_update_on_start_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_auto_update"
            android:summary="@string/pref_auto_update_summary"
            android:title="@string/pref_auto_update_title" />
        
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_interface_settings"
        android:title="@string/pref_interface_settings_title" >
        
	    <MultiSelectListPreference
	        android:defaultValue="@array/multi_select_event_types_default_values"
	        android:dialogTitle="@string/incident_select_dialog_title"
	        android:entries="@array/multi_select_event_types"
	        android:entryValues="@array/multi_select_event_values"
	        android:key="pref_incident_select"
	        android:summary=""
	        android:title="@string/incident_select_title" />
	    
    </PreferenceCategory>
    
</PreferenceScreen>